--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
           - "5432:5432"
         env:
           POSTGRES_PASSWORD: password
+          POSTGRES_DB: secure_files_with_log_auditing_test
           
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
