--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,20 +30,15 @@ services:
     restart: unless-stopped
 
   keycloak:
-    container_name: keycloak2
-    image: quay.io/keycloak/keycloak:23.0
+    container_name: keycloak
+    image: bitnami/keycloak:26.0.5-debian-12-r0
     environment:
-      KC_DB: postgres
-      KC_DB_PASSWORD: password
-      KC_DB_SCHEMA: public
-      KC_DB_URL: jdbc:postgresql://postgres:5432/secure_files_with_log_auditing_development
-      KC_DB_USERNAME: zeyad
+      KEYCLOAK_DATABASE_HOST: postgres
+      KEYCLOAK_DATABASE_PASSWORD: password
+      KEYCLOAK_DATABASE_SCHEMA: public
+      KEYCLOAK_DATABASE_NAME: secure_files_with_log_auditing_developments
+      KEYCLOAK_DATABASE_USER: zeyad
       KC_DB_URL_PORT: 5432
-      KC_DB_URL_HOST: postgres
-      # KC_FILE: /opt/keycloak/import/realm-export.json
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: admin
-    command: start-dev
     depends_on:
       - postgres
     ports:
