--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,41 +14,37 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:alpine3.18
-        ports:
-          - "5432:5432"
-        env:
-          POSTGRES_PASSWORD: password
-          POSTGRES_DB: secure_files_with_log_auditing_test
-          
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
-
+    
     env:
       RAILS_ENV: test
-      PG_USER: postgres
-      PG_HOST: localhost
-      PG_PASSWORD: password
+      KC_CLIENT_SECRET: ${{ secrets.KC_CLIENT_SECRET }}
+      rb_kc_secret: ${{ secrets.KC_CLIENT_SECRET }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        
-      - name: Wait for PostgreSQL
-        run: |
-          until pg_isready -h $PG_HOST -U $PG_USER; do
-            echo "Waiting for PostgreSQL to be ready..."
-            sleep 1
-          done
-      # Add or replace dependency steps here
+      - uses: actions/checkout@v4
+
       - name: Install Ruby and gems
         uses: ruby/setup-ruby@78c01b705fd9d5ad960d432d3a0cfa341d50e410 # v1.179.1
         with:
           ruby-version: '3.3.0' 
           bundler-cache: true
+      
+      - name: injecting kc_client_secret
+        uses: ruby ./update_secret.rb
+      
+      - name: Run docker-compose
+        uses: hoverkraft-tech/compose-action@v2.0.1
+        with:
+          compose-file: "./docker-compose-test.yml"
+      
+      - name: Health check for containers
+        run: |
+          chmod +x ./kc_health.sh
+          ./kc_health.sh
+      
       # Add or replace database setup steps here
       - name: Set up database schema
         run: bin/rails db:prepare
+
       # Add or replace test runners here
       - name: Run tests
         run: bundle exec rspec
